--- a/app/views/calender_events/index.html.erb
+++ b/app/views/calender_events/index.html.erb
@@ -1,2 +1,6 @@
-<h1>CalenderEvents#index</h1>
-<p>Find me in app/views/calender_events/index.html.erb</p>
+<h1>CalenderEvents</h1>
+<%= button_to 'Update Events', update_events_path, :method => :get, :remote => true %>
+<div id="event-list">
+  <%= render :partial => "event_list" %>
+</div>
+
